--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2018"
 [profile.release]
 
 [dependencies]
-libc = "0.2.2"
+libc = "0.2.67"
+structopt = "0.3.11"
+clap = { git = "https://github.com/clap-rs/clap/" }
