--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "bf_inter"
-version = "0.1.0"
+name = "bf_run"
+version = "1.0.0"
 authors = ["Andreas Ejdesgaard <andreasejdesgaard@protonmail.com>"]
 edition = "2018"
+license = "GPL-3.0-or-later"
+readme = "README.md"
 
 [profile.release]
 
 [dependencies]
-libc = "0.2.67"
-structopt = "0.3.11"
+libc = "0.2.74"
+structopt = "0.3.15"
 clap = { git = "https://github.com/clap-rs/clap/" }
