--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,7 @@
-[package]
-name = "bf_run"
-version = "1.0.0"
-authors = ["Andreas Ejdesgaard <andreasejdesgaard@protonmail.com>"]
-edition = "2018"
-license = "GPL-3.0-or-later"
-readme = "README.md"
+[workspace]
+members = [
+    "bf_run_term"
+]
 
 [profile.release]
-
-[dependencies]
-libc = "0.2.74"
-structopt = "0.3.15"
-clap = { git = "https://github.com/clap-rs/clap/" }
+lto = true
