--- a/static_dispath/Cargo.toml
+++ b/static_dispath/Cargo.toml
@@ -9,5 +9,5 @@ license = "GPL-3.0-or-later"
 proc-macro = true
 
 [dependencies]
-quote = "1.0.7"
-syn = "1.0.42"
+quote = "1.0.14"
+syn = { version = "1.0.84", features = ["full"] }
