Make recompiler compile on for Windows OS.

--- a/bf_run_core/Cargo.toml
+++ b/bf_run_core/Cargo.toml
@@ -8,4 +8,4 @@ license = "GPL-3.0-or-later"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libc = "0.2.112"
+memmap = "0.7.0"
